# PubChem-MCP

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_client.py
mcp_server/: __init__.py  __main__.py  server.py
mcp_server/compounds/: __init__.py  search.py  similarity.py
mcp_server/documents/: __init__.py
mcp_server/substances/: __init__.py
mcp_server/utils/: __init__.py
src/pubchem_mcp/: __init__.py  __main__.py
src/pubchem_mcp/compounds/: details.py  properties.py  structures.py
tests/: __init__.py  test_batch_operations.py  test_bioassay_endpoints.py  test_compound_classification.py  test_compound_formats.py  test_compound_properties.py  test_compound_xrefs.py  test_literature_endpoints.py  test_pubchem_mcp_server.py  test_structure_search.py  test_substance_endpoints.py
